# deep-research-agent

./: .env.example  README.md  app.py  pyproject.toml
deep_research/: .env.example
deep_research/agents/: full_agent.py  research_agent.py  scoping_agent.py  supervisor_agent.py
notebooks/: agent1.ipynb  agent2.ipynb  agent3.ipynb  agent4.ipynb
